# libiamo

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  PRE_COMMIT_CHECK.md  README.md
.github/workflows/: ci.yml
.sqlx/: query-059e9902280c8d78f46bc42177e2c5c853bdc9f98bed76fdbae87ad8ba82b3e8.json  query-383325e33a9ad418d1b46c05a183dd314de6353f53e425076f1c44f5f56845ea.json  query-3f65ecf1ac80641138cfa6c27b0ea23defb530cb3da7126675c6d6fcfffacba8.json  query-5e4a52d146bd0211aff440b8749d23a237e6e670eb489840c5399353ebdace26.json  query-67510f1d2f9658990ea77bb1c0dd594f34a5ae972d5eddf86d104f77209c2944.json  query-c1ad68884a6cc9f5c32d6c53d51c6477f64afaac0defef6b8681f5e9a525f395.json  query-fc16b203aa12317d7855f95cc25d4d64c574d145cb0ba2ab01e941a0780b8e3f.json
docs/: libiamo_doc.md
migrations/: 20260324010620_init_auth.sql  20260329142256_add_learning_profiles.sql
scripts/: README.md  setup-and-run.sh  setup-db.sh
src/: error.rs  lib.rs  main.rs
src/handlers/: auth.rs
src/models/: auth.rs  types.rs
src/services/: email.rs  token.rs
tests/: auth_tests.rs  lib.rs
tests/auth/: common.rs  integration.rs  login.rs  logout.rs  mod.rs  register.rs  token.rs  verify_email.rs
