[package]
name = "libiamo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
mime = "0.3"
axum-test = "19.1"
